# demovote

./: CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
.github/workflows/: cmake.yml
booth/: CMakeLists.txt  main.cpp
voting/: CMakeLists.txt
voting/include/voting/: contest.hpp
voting/src/: contest.cpp
voting/test/: contest_test.cpp
